--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 		.poppins {
 			font-family: 'Poppins', sans-serif;
 		}
+
+		.blueShadow {
+			box-shadow: 0px 14px 55px rgba(109, 40, 217, 0.45);
+		}
 	</style>
 </head>
 
@@ -57,15 +61,13 @@
 		<a href="#projects"class="duration-200 hover:text-violet-400">
 			<p>Projects</p>
 		</a>
-		<a href="#about"class="duration-200 hover:text-violet-400">
-			<p>About Me</p>
-		</a>
 		<a href="#footer"class="duration-200 hover:text-violet-400">
-			<button class="relative overflow-hidden px-5 py-2 group rounded-full bg-white text-slate-950">
-				<div class="absolute top-0 right-full w-full h-full bg-violet-400 opacity-20 group-hover:translate-x-full z-0 duration-200"/>
-					<h4 class="relative z-9">Get in touch</h4>
-			</button>
+			<p>Contact Me</p>
 		</a>
+		<!-- <a href="#footer"class="blueShadow relative overflow-hidden px-5 py-2 group rounded-full bg-white text-slate-950">
+				<div class="absolute top-0 right-full w-full h-full bg-violet-400 opacity-20 group-hover:translate-x-full z-0 duration-200"/>
+				<h4 class="relative z-9">Get in touch</h4>
+		</a> -->
 	</div>
 	</header>
 
@@ -82,30 +84,27 @@
 		</div>
 	</section>
 
+	<section class="py-20 lg:py-32 flex flex-col gap-24" id="projects">
+        <div class="flex flex-col gap-2 text-center">
+            <h4 class="font-semibold text-3xl sm:text-4xl md:text-5xl">
+                <span class="poppins text-violet-400">Website Status : </span> Work in Progress
+            </h4>
+        </div>
+	</section>
+
 	<footer class="py-20 sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
 		<p class="px-4 py-2 bg-white text-slate-950 font-medium">
 			Connect with me &darr;
 		</p>
 		<div class="flex flex-col gap-4 items-center justify-center">
-			<p><b class="pr-2">Email</b> samuel_oak@gmail.com</p>
+			<p><b class="pr-2">Email</b> dirghkotharia@gmail.com</p>
 			<p>
 				<b class="pr-2">GitHub</b>
-				<a href=" " target="_blank" class="text-violet-400">Dirgh-Kotharia
-					<sup class="">
-						<span class="text-xs scale-75 pl-0.5">
-							<i class="fa-solid fa-arrow-up-right-from-square text-xs scale-[75%]"/>
-						</span>
-					</sup>
-					</a>
+				<a href="https://github.com/Dirgh-Kotharia" target="_blank" class="text-violet-400">Dirgh-Kotharia</a>
 			</p>
 			<p>
 				<b class="pr-2">LinkedIn</b>
 				<a href=" " target="_blank" class="text-violet-400">Dirgh-Kotharia
-					<sup class="">
-						<span class="text-xs scale-75 pl-0.5">
-							<i class="fa-solid fa-arrow-up-right-from-square text-xs scale-[75%]"/>
-						</span>
-					</sup>
 				</a>
 			</p>
 		</div>
