--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body class="bg-slate-950 text-white relative">
 	<div style="display: contents" class="relative z-[1]"></div>
 
-	<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
+	<div class="absolute min-h-screen top-0 left-0 w-full z-[0] opacity-70">
 		<div id="particles-js" class="absolute inset-0">
 	</div>
 
@@ -64,10 +64,6 @@
 		<a href="#footer"class="duration-200 hover:text-violet-400">
 			<p>Contact Me</p>
 		</a>
-		<!-- <a href="#footer"class="blueShadow relative overflow-hidden px-5 py-2 group rounded-full bg-white text-slate-950">
-				<div class="absolute top-0 right-full w-full h-full bg-violet-400 opacity-20 group-hover:translate-x-full z-0 duration-200"/>
-				<h4 class="relative z-9">Get in touch</h4>
-		</a> -->
 	</div>
 	</header>
 
@@ -100,12 +96,11 @@
 			<p><b class="pr-2">Email</b> dirghkotharia@gmail.com</p>
 			<p>
 				<b class="pr-2">GitHub</b>
-				<a href="https://github.com/Dirgh-Kotharia" target="_blank" class="text-violet-400">Dirgh-Kotharia</a>
+				<a href="https://github.com/Dirgh-Kotharia" target="_blank" class="text-violet-400" > Dirgh-Kotharia </a>
 			</p>
 			<p>
 				<b class="pr-2">LinkedIn</b>
-				<a href=" " target="_blank" class="text-violet-400">Dirgh-Kotharia
-				</a>
+				<a href="https://www.linkedin.com/in/dirgh-kotharia-3756a7168" target="_blank" class="text-violet-400" > Dirgh-Kotharia </a>
 			</p>
 		</div>
 	</footer>
