--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 	</section>
 
-	<footer class="py-20 sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
+	<footer class="relative sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
 		<p class="px-4 py-2 bg-white text-slate-950 font-medium">
 			Connect with me &darr;
 		</p>
