--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<section id="introPage" class="lg:grid-cols-2 gap-10 py-8 sm:py-14">
 		<div class="lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
 			<h2 class="font-semibold text-4xl sm:text-5xl md:text-6xl">
-				Hi! I'm <span class="poppins text-violet-400">Dirgh Kotharia !!</span> 
+				Hi! I'm Dirgh Kotharia !!
 				<br />
 				<br />
 			</h2>
