--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         </div>
 	</section>
 
-	<footer class="relative sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
+	<footer class="sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
 		<p class="px-4 py-2 bg-white text-slate-950 font-medium">
 			Connect with me &darr;
 		</p>
-		<div class="flex flex-col gap-4 items-center justify-center">
+		<div class="relative flex flex-col gap-4 items-center justify-center">
 			<p><b class="pr-2">Email</b> dirghkotharia@gmail.com</p>
 			<p>
 				<b class="pr-2">GitHub</b>
