--- a/index.html
+++ b/index.html
@@ -67,27 +67,28 @@
 	</div>
 	</header>
 
-	<section id="introPage" class="lg:grid-cols-2 gap-10 py-8 sm:py-14">
-		<div class="lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
-			<h2 class="font-semibold text-4xl sm:text-5xl md:text-6xl">
-				Hi! I'm Dirgh Kotharia !!
-				<br />
-				<br />
-			</h2>
-			<p class="text-base sm:text-lg md:text-xl">
-				<span class="text-violet-400">A Cloud Technology and Cybersecurity Enthusiast</span>
-			</p>
-		</div>
-	</section>
+	<main class="flex flex-col flex-1 p-4">
+		<section id="introPage" class="lg:grid-cols-2 gap-10 py-8 sm:py-14">
+			<div class="lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
+				<h2 class="font-semibold text-4xl sm:text-5xl md:text-6xl">
+					Hi! I'm Dirgh Kotharia !!
+					<br />
+					<br />
+				</h2>
+				<h4 class="font-semibold text-3xl sm:text-4xl md:text-5xl">
+					<span class="text-violet-400">A Cloud Technology and Cybersecurity Enthusiast</span>
+				</h4>
+			</div>
+		</section>
 
-	<section class="py-20 lg:py-32 flex flex-col gap-24" id="projects">
-        <div class="flex flex-col gap-2 text-center">
-            <h4 class="font-semibold text-3xl sm:text-4xl md:text-5xl">
-                <span class="poppins text-violet-400">Website Status : </span> Work in Progress
-            </h4>
-        </div>
-	</section>
-
+		<section class="py-20 lg:py-32 flex flex-col gap-24" id="projects">
+			<div class="flex flex-col gap-2 text-center">
+				<h4 class="font-semibold text-3xl sm:text-4xl md:text-5xl">
+					<span class="poppins text-violet-400">Website Status : </span> Work in Progress
+				</h4>
+			</div>
+		</section>
+	</main>
 	<footer class="sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
 		<p class="px-4 py-2 bg-white text-slate-950 font-medium">
 			Connect with me &darr;
