--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
 <head>
 	<meta charset="utf-8" />
 	<script src="https://cdn.tailwindcss.com"></script>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
-		integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap"
-		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<link rel="preconnect" href="https://fonts.bunny.net">
+	<link href="https://fonts.bunny.net/css?family=poppins:100,200,300,400,500,600,700,800,900|roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width" />
 
 	<style>
@@ -31,10 +24,6 @@
 		h3,
 		.poppins {
 			font-family: 'Poppins', sans-serif;
-		}
-
-		.blueShadow {
-			box-shadow: 0px 14px 55px rgba(109, 40, 217, 0.45);
 		}
 	</style>
 </head>
@@ -55,7 +44,9 @@
 	<header class="sticky z-[10] top-0 duration-200 px-6 flex items-center justify-between border-b border-solid py-4 bg-slate-950 border-violet-950" >
 	
 	<h1 class="font-medium">
-		<b class="font-bold poppins">Dirgh</b> <span class="">Kotharia</span>
+		<a href="#projects"class="duration-200 hover:text-violet-400">
+			<b class="font-bold poppins">Dirgh</b> <span class="">Kotharia</span>
+		</a>		
 	</h1>
 	<div class="sm:flex items-center gap-4 hidden">
 		<a href="#projects"class="duration-200 hover:text-violet-400">
@@ -67,7 +58,7 @@
 	</div>
 	</header>
 
-	<main class="flex flex-col flex-1 p-4">
+	<main class="flex flex-col flex-1 p-4" id="top">
 		<section id="introPage" class="lg:grid-cols-2 gap-10 py-8 sm:py-14">
 			<div class="lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
 				<h2 class="font-semibold text-4xl sm:text-5xl md:text-6xl">
