--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<header class="sticky z-[10] top-0 duration-200 px-6 flex items-center justify-between border-b border-solid py-4 bg-slate-950 border-violet-950" >
 	
 	<h1 class="font-medium">
-		<a href="#projects"class="duration-200 hover:text-violet-400">
+		<a href="#top"class="duration-200 hover:text-violet-400">
 			<b class="font-bold poppins">Dirgh</b> <span class="">Kotharia</span>
 		</a>		
 	</h1>
