--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	</header>
 
 	<main class="flex flex-col flex-1 p-4" id="top">
-		<section id="introPage" class="lg:grid-cols-2 gap-10 py-8 sm:py-14">
-			<div class="lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
+		<section id="introPage" class="gap-10 py-8 sm:py-14 h-screen">
+			<div class="flex flex-col lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
 				<h2 class="font-semibold text-4xl sm:text-5xl md:text-6xl">
 					Hi! I'm Dirgh Kotharia !!
 					<br />
@@ -80,11 +80,11 @@
 			</div>
 		</section>
 	</main>
-	<footer class="sm:py-32 bg-black border-t border-solid border-violet-950 flex flex-col gap-4 sm:gap-8 justify-center items-center" id="footer">
+	<footer class="gap-10 py-8 sm:py-14 bg-black border-t border-solid border-violet-950 flex flex-col justify-center items-center" id="footer">
 		<p class="px-4 py-2 bg-white text-slate-950 font-medium">
 			Connect with me &darr;
 		</p>
-		<div class="relative flex flex-col gap-4 items-center justify-center">
+		<div class="relative flex flex-col gap-4 sm:gap-6 mx-auto items-center justify-center">
 			<p><b class="pr-2">Email</b> dirghkotharia@gmail.com</p>
 			<p>
 				<b class="pr-2">GitHub</b>
