--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</header>
 
 	<main class="flex flex-col flex-1 p-4" id="top">
-		<section id="introPage" class="gap-10 py-8 sm:py-14 h-screen">
+		<section id="introPage" class="gap-10 py-8 sm:py-14">
 			<div class="flex flex-col lg:justify-center text-center lg:text-center gap-6 md:gap-8 lg:gap-10">
 				<h2 class="font-semibold text-4xl sm:text-5xl md:text-6xl">
 					Hi! I'm Dirgh Kotharia !!
