updated mail text to a link

--- a/index.html
+++ b/index.html
@@ -85,14 +85,17 @@
 			Connect with me &darr;
 		</p>
 		<div class="relative flex flex-col gap-4 sm:gap-6 mx-auto items-center justify-center">
-			<p><b class="pr-2">Email</b> dirghkotharia@gmail.com</p>
+			<p>
+				<b class="pr-2">Email</b>
+				<a href="mailto:dirghkotharia@gmail.com" target="_blank" class="text-violet-400" >dirghkotharia@gmail.com</a>
+			</p>
 			<p>
 				<b class="pr-2">GitHub</b>
-				<a href="https://github.com/Dirgh-Kotharia" target="_blank" class="text-violet-400" > Dirgh-Kotharia </a>
+				<a href="https://github.com/Dirgh-Kotharia" target="_blank" class="text-violet-400" >Dirgh-Kotharia</a>
 			</p>
 			<p>
 				<b class="pr-2">LinkedIn</b>
-				<a href="https://www.linkedin.com/in/dirgh-kotharia-3756a7168" target="_blank" class="text-violet-400" > Dirgh-Kotharia </a>
+				<a href="https://www.linkedin.com/in/dirgh-kotharia-3756a7168" target="_blank" class="text-violet-400" >Dirgh-Kotharia</a>
 			</p>
 		</div>
 	</footer>
